--- a/GemStore/index.html
+++ b/GemStore/index.html
@@ -1,8 +1,11 @@
-<html>
+<html ng-app="gemStore">
 <head>
-	<title></title>
+	<title>GemStore</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-
+	{{"Hello, Angular!"}}
 </body>
 </html>
