--- a/GemStore/index.html
+++ b/GemStore/index.html
@@ -5,7 +5,10 @@
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
-<body>
-	{{"Hello, Angular!"}}
+<body ng-controller="StoreController as store">
+	<h3>
+		{{store.product.name}}
+		<em>{{store.product.price}}</em>
+	</h3>
 </body>
 </html>
