--- a/GemStore/index.html
+++ b/GemStore/index.html
@@ -7,13 +7,11 @@
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body ng-controller="StoreController as store">
-	<div ng-hide="store.product.soldOut">
+	<div ng-repeat="product in store.products">
 		<h3>
 			{{store.product.name}}
 			<em>{{store.product.price}}</em>
 		</h3>
 	</div>
-
-	<button ng-show="store.product.canPurchase">Add to Cart</button>
 </body>
 </html>
