--- a/GemStore/index.html
+++ b/GemStore/index.html
@@ -9,8 +9,8 @@
 <body ng-controller="StoreController as store">
 	<div ng-repeat="product in store.products">
 		<h3>
-			{{store.product.name}}
-			<em>{{store.product.price}}</em>
+			{{product.name}}
+			<em>{{product.price}}</em>
 		</h3>
 	</div>
 </body>
